--- a/README.textile
+++ b/README.textile
@@ -1,1 +1,31 @@
-Yet to come...
+h1. What is this
+
+Suppose you want to treat an image as a single line. You can do that in many ways. One of them is to run through the image in a spiraling fashion: go straight until you either reach the border of the image or you reach a pixel you've already been at, then turn right.
+
+This is an implementation of the algorithm described above (and its inverse). It's still quite simple, but feel free to use, send feedback or collaborate.
+
+h1. How to use
+
+Download the jar available in the "Downloads" link above. Then, in the command line, run:
+
+<pre>
+java -jar spiral-image-1.0.jar
+</pre>
+
+to get more help. For instance, suppose you have a file called "background.jpg" and you want to convert it to 1D. Then you could run:
+
+<pre>
+java -jar spiral-image-1.0.jar background.jpg background-1D.jpg
+</pre>
+
+This will result in a file called "background-1D.jpg" being created, and this file will be an image with a single line, formed by all the pixels of the original image.
+
+To get the original image back, you need also to say its original size. Suppose it was 1024x768. Then you could run:
+
+<pre>
+java -jar spiral-image-1.0.jar background-1D.jpg 1024 768 background-2D.jpg
+</pre>
+
+h1. Supported formats
+
+The supported formats depend on your installed Java, but usually include the most common ones: JPG, PNG and BMP.
