--- a/README.textile
+++ b/README.textile
@@ -9,13 +9,13 @@ h1. How to use
 Download the jar available in the "Downloads" link above. Then, in the command line, run:
 
 <pre>
-java -jar spiral-image-1.0.jar
+java -jar onedeefy-1.0.jar
 </pre>
 
 to get more help. For instance, suppose you have a file called "background.jpg" and you want to convert it to 1D. Then you could run:
 
 <pre>
-java -jar spiral-image-1.0.jar background.jpg background-1D.jpg
+java -jar onedeefy-1.0.jar background.jpg background-1D.jpg
 </pre>
 
 This will result in a file called "background-1D.jpg" being created, and this file will be an image with a single line, formed by all the pixels of the original image.
@@ -23,7 +23,7 @@ This will result in a file called "background-1D.jpg" being created, and this fi
 To get the original image back, you need also to say its original size. Suppose it was 1024x768. Then you could run:
 
 <pre>
-java -jar spiral-image-1.0.jar background-1D.jpg 1024 768 background-2D.jpg
+java -jar onedeefy-1.0.jar background-1D.jpg 1024 768 background-2D.jpg
 </pre>
 
 Oh, and you can also use it directly in your Java code. Simply add it to your classpath and use the Spiralizer methods to "spiralize" (transform into 2D) or "despiralize" (transform into 1D) your image.
